# chat-with-ai-pdf

./: .env.exemple  .gitignore  README.md  main.py  package-lock.json  requirements.txt
adapters/ai/: openAi.py
backend/: .dockerignore  .uv  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  prompt.txt  pyproject.toml
backend/src/api/schemas/: chat_input.py  chat_response.py  pdf_input.py  search.py
backend/src/application/adapters/ai_chat/: LMStudio.py  openAI.py
backend/src/application/adapters/embeding/: localEmbeding.py
backend/src/data/chroma_db/: chroma.sqlite3
backend/src/domain/ports/: embeding.py
backend/src/domain/services/: vector_service.py
backend/src/tools/: document_processor.py  file.py  text_extract.py
data/: prompt_exemple.py
domain/ports/: ai.py
domain/services/: AiService.py
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: const.ts
frontend/src/lib/components/: ModeToggle.svelte  flash-message.svelte
frontend/src/lib/components/chat/: input-chat.svelte  loader.svelte  main-chat.svelte  new-conversation.svelte
frontend/src/lib/components/chat/conversation/: card.svelte  list.svelte
frontend/src/lib/components/profil/: update-name.svelte  update-password.svelte
frontend/src/lib/server/db/: schema.ts
frontend/src/lib/services/: api.service.ts  auth.service.ts  conversation.service.ts  flash.service.ts  index.ts
frontend/src/lib/types/: auth.type.ts  chat.type.ts  conversation.type.ts  index.ts  service.type.ts  stat.type.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/(protected)/: +layout.server.ts  +layout.svelte
frontend/src/routes/(protected)/chat/: +page.server.ts
frontend/src/routes/(protected)/chat/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/(protected)/pdf/form/: +page.svelte
frontend/src/routes/(protected)/pdf/list/: +page.server.ts  +page.svelte
frontend/src/routes/(protected)/profil/: +page.server.ts  +page.svelte
frontend/src/routes/(protected)/stat/: +page.server.ts  +page.svelte
frontend/src/routes/(public)/: +layout.svelte  +page.svelte
frontend/src/routes/(public)/login/: +page.server.ts  +page.svelte
frontend/src/routes/(public)/logout/: +page.server.ts
frontend/src/routes/(public)/register/: +page.svelte
frontend/src/routes/api/files/[fileName]/: +server.ts
src/api/schemas/: chat_response.py  history.py  pdf.py
src/application/adapters/ai_chat/: openAI.py
src/application/adapters/embedding/: OpenAI.py
src/application/adapters/vector/: LocalVector.py
src/domain/ports/: ai.py  embedding.py  vector.py
src/domain/services/: ai_service.py  vector_service.py
src/front/html/: documentation.html  index.html
src/front/js/: documentation.js  index.js
src/tools/: init_vector_service.py
tools/: file.py  obsidian.py  pdf.py
